--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,50 @@
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-oxm</artifactId>
 		<version>3.2.6.RELEASE</version>
-	</dependency>    
+	</dependency>
+	
+	<!-- NEW DEPENDENCIES ADDED FOR JPA PORTION OF CLASS -->
+	
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>8.0.17</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+	<dependency>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-entitymanager</artifactId>
+	    <version>5.4.4.Final</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/javax.transaction/javax.transaction-api -->
+	<dependency>
+	    <groupId>javax.transaction</groupId>
+	    <artifactId>javax.transaction-api</artifactId>
+	    <version>1.3</version>
+	</dependency>
+	<dependency>
+	    <groupId>javax.transaction</groupId>
+	    <artifactId>jta</artifactId>
+	    <version>1.1</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-jdbc</artifactId>
+        <version>3.2.6.RELEASE</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-orm</artifactId>
+        <version>3.2.6.RELEASE</version>
+	</dependency>
+	
+		
+
+	    
   </dependencies>
   <build>
     <finalName>FitnessTracker</finalName>
