--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
     	<groupId>org.springframework</groupId>
     	<artifactId>spring-webmvc</artifactId>
-    	<version>3.2.6.RELEASE</version>
+    	<version>5.1.9.RELEASE</version>
     </dependency>
     <dependency>
     	<groupId>javax.servlet</groupId>
@@ -33,7 +33,7 @@
     <dependency>
     	<groupId>org.hibernate</groupId>
     	<artifactId>hibernate-validator</artifactId>
-    	<version>4.2.0.Final</version>
+    	<version>4.3.1.Final</version>
     </dependency>
     <dependency>
     	<groupId>org.codehaus.jackson</groupId>
@@ -48,7 +48,12 @@
 	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-oxm</artifactId>
-		<version>3.2.6.RELEASE</version>
+		<version>5.1.9.RELEASE</version>
+	</dependency>
+	<dependency>
+		<groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.3.0</version>
 	</dependency>
 	
 	<!-- NEW DEPENDENCIES ADDED FOR JPA PORTION OF CLASS -->
@@ -64,7 +69,12 @@
 	<dependency>
 	    <groupId>org.hibernate</groupId>
 	    <artifactId>hibernate-entitymanager</artifactId>
-	    <version>5.4.4.Final</version>
+	    <version>4.3.1.Final</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-core</artifactId>
+	    <version>4.3.1.Final</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/javax.transaction/javax.transaction-api -->
 	<dependency>
@@ -81,13 +91,13 @@
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-jdbc</artifactId>
-        <version>3.2.6.RELEASE</version>
+        <version>5.1.9.RELEASE</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-orm</artifactId>
-        <version>3.2.6.RELEASE</version>
+	    <version>5.1.9.RELEASE</version>
 	</dependency>
 	
 		
