--- a/pom.xml
+++ b/pom.xml
@@ -33,13 +33,19 @@
     <dependency>
     	<groupId>org.hibernate</groupId>
     	<artifactId>hibernate-validator</artifactId>
-    	<version>4.3.1.Final</version>
+    	<version>5.4.1.Final</version>
     </dependency>
     <dependency>
     	<groupId>org.codehaus.jackson</groupId>
     	<artifactId>jackson-mapper-asl</artifactId>
     	<version>1.4.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.9.9.3</version>
+	</dependency>
     <dependency>
     	<groupId>com.thoughtworks.xstream</groupId>
     	<artifactId>xstream</artifactId>
@@ -69,12 +75,12 @@
 	<dependency>
 	    <groupId>org.hibernate</groupId>
 	    <artifactId>hibernate-entitymanager</artifactId>
-	    <version>4.3.1.Final</version>
+	    <version>5.4.1.Final</version>
 	</dependency>
 	<dependency>
 	    <groupId>org.hibernate</groupId>
 	    <artifactId>hibernate-core</artifactId>
-	    <version>4.3.1.Final</version>
+	    <version>5.4.1.Final</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/javax.transaction/javax.transaction-api -->
 	<dependency>
