--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,19 @@
 	    <artifactId>spring-orm</artifactId>
 	    <version>5.1.9.RELEASE</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+	<dependency>
+	    <groupId>org.springframework.data</groupId>
+	    <artifactId>spring-data-jpa</artifactId>
+	    <version>2.1.10.RELEASE</version>
+	    <exclusions>
+		    <exclusion>
+		    	<groupId>org.springframework</groupId>
+		    	<artifactId>spring-aop</artifactId>
+		    </exclusion>
+	    </exclusions>
+	</dependency>
+	
 	
 		
 
